2013-01-17  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/ldap_auth.c (ldap_auth_bind): If switching to StartTLS
	fails and allow-plaintext is true, close and re-establish connection,
	to overcome fact that ADS does not allow bind after StartTLS
	negotiation fail. Reuse ldapuri, thus free at other places.

2013-01-17  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/ldap_auth.c (ldap_auth_bind): Abort if password is
	of zero length. Default ADS behaviour allows binding with
	correct username but empty password.

2013-01-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/nvticache.c (nvticache_get_src_by_oid): New. Returns
	the copy of the src string. This function is special because
	src is the only element that is directly stored in a shrinked
	nvti object. Using this function prevents the loading of the
	nvti object from filesystem when only src is needed.

	* base/nvticache.h: Added proto accordingly.

2013-01-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Third part towards clean separation of NVTI into the NVTI Cache:
	The nvti objects in memory are shrinked to essential data
	and details are loaded from file when needed.
	This decreases memory consumption by around 30M per process
	in my test environment.

	* base/nvti.c (nvti_shrink): New. Free memory of all elements
	except src and oid.

	* base/nvti.h: Add proto for nvti_shrink.

	* base/nvticache.c (nvticache_get): Search the nvtis and return
	nvti if found. If new, shrink it and then add it to nvtis.
	In any case a cloned, shrinked nvti is returned.
	(nvticache_get_by_oid): Because the nvti is shrinked, load
	the full object from file, create a new object and return it.

	* nasl/nasl_scanner_glue.c (security_message): Free the nvti object
	because it is a clone now.

	* misc/plugutils.c (plug_create_from_nvti_and_prefs): Use a copy
	of the oid string for OID.
	(proto_post_wrapped, get_plugin_preference): Free the nvti object
	after use.
